--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,147 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "absl-py==2.1.0",
+    "anyio==4.8.0",
+    "argon2-cffi==23.1.0",
+    "argon2-cffi-bindings==21.2.0",
+    "arrow==1.3.0",
+    "asttokens==3.0.0",
+    "async-lru==2.0.4",
+    "attrs==25.1.0",
+    "babel==2.17.0",
+    "beautifulsoup4==4.13.1",
+    "bleach==6.2.0",
+    "certifi==2025.1.31",
+    "cffi==1.17.1",
+    "charset-normalizer==3.4.1",
+    "cloudpickle==3.1.1",
+    "comm==0.2.2",
+    "contourpy==1.3.1",
+    "cycler==0.12.1",
+    "debugpy==1.8.12",
+    "decorator==5.1.1",
+    "defusedxml==0.7.1",
+    "dm-tree==0.1.9",
+    "executing==2.2.0",
+    "fastjsonschema==2.21.1",
+    "fonttools==4.55.8",
+    "fqdn==1.5.1",
+    "gast==0.6.0",
+    "h11==0.14.0",
+    "httpcore==1.0.7",
+    "httpx==0.28.1",
+    "idna==3.10",
+    "inference-gym==0.0.5",
+    "ipykernel==6.29.5",
+    "ipython==8.32.0",
+    "ipywidgets==8.1.5",
+    "isoduration==20.11.0",
+    "jax==0.5.0",
+    "jax-cuda12-pjrt==0.5.0",
+    "jax-cuda12-plugin==0.5.0",
+    "jaxlib==0.5.0",
+    "jedi==0.19.2",
+    "jinja2==3.1.5",
+    "json5==0.10.0",
+    "jsonpointer==3.0.0",
+    "jsonschema==4.23.0",
+    "jsonschema-specifications==2024.10.1",
+    "jupyter==1.1.1",
+    "jupyter-client==8.6.3",
+    "jupyter-console==6.6.3",
+    "jupyter-core==5.7.2",
+    "jupyter-events==0.12.0",
+    "jupyter-lsp==2.2.5",
+    "jupyter-server==2.15.0",
+    "jupyter-server-terminals==0.5.3",
+    "jupyterlab==4.3.5",
+    "jupyterlab-pygments==0.3.0",
+    "jupyterlab-server==2.27.3",
+    "jupyterlab-widgets==3.0.13",
+    "kiwisolver==1.4.8",
+    "lab==8.3",
+    "markdown-it-py==3.0.0",
+    "markupsafe==3.0.2",
+    "matplotlib==3.10.0",
+    "matplotlib-inline==0.1.7",
+    "mdurl==0.1.2",
+    "mistune==3.1.1",
+    "ml-dtypes==0.5.1",
+    "multipledispatch==1.0.0",
+    "nbclient==0.10.2",
+    "nbconvert==7.16.6",
+    "nbformat==5.10.4",
+    "nest-asyncio==1.6.0",
+    "notebook==7.3.2",
+    "notebook-shim==0.2.4",
+    "numpy==2.2.2",
+    "numpyro==0.16.1",
+    "nvidia-cublas-cu12==12.8.3.14",
+    "nvidia-cuda-cupti-cu12==12.8.57",
+    "nvidia-cuda-nvcc-cu12==12.8.61",
+    "nvidia-cuda-runtime-cu12==12.8.57",
+    "nvidia-cudnn-cu12==9.7.0.66",
+    "nvidia-cufft-cu12==11.3.3.41",
+    "nvidia-cusolver-cu12==11.7.2.55",
+    "nvidia-cusparse-cu12==12.5.7.53",
+    "nvidia-nccl-cu12==2.25.1",
+    "nvidia-nvjitlink-cu12==12.8.61",
+    "opt-einsum==3.4.0",
+    "overrides==7.7.0",
+    "packaging==24.2",
+    "pandocfilters==1.5.1",
+    "parso==0.8.4",
+    "pexpect==4.9.0",
+    "pillow==11.1.0",
+    "platformdirs==4.3.6",
+    "prometheus-client==0.21.1",
+    "prompt-toolkit==3.0.50",
+    "psutil==6.1.1",
+    "ptyprocess==0.7.0",
+    "pure-eval==0.2.3",
+    "pycparser==2.22",
+    "pygments==2.19.1",
+    "pyparsing==3.2.1",
+    "pyright>=1.1.393",
+    "python-dateutil==2.9.0.post0",
+    "python-json-logger==3.2.1",
+    "pyyaml==6.0.2",
+    "pyzmq==26.2.1",
+    "referencing==0.36.2",
+    "requests==2.32.3",
+    "rfc3339-validator==0.1.4",
+    "rfc3986-validator==0.1.1",
+    "rich==13.9.4",
+    "rpds-py==0.22.3",
+    "scipy==1.15.1",
+    "send2trash==1.8.3",
+    "setuptools==75.8.0",
+    "simplejson==3.19.3",
+    "six==1.17.0",
+    "sniffio==1.3.1",
+    "soupsieve==2.6",
+    "stack-data==0.6.3",
+    "tensorflow-probability==0.25.0",
+    "terminado==0.18.1",
+    "tinycss2==1.4.0",
+    "tornado==6.4.2",
+    "tqdm==4.67.1",
+    "traitlets==5.14.3",
+    "txt2tags==3.9",
+    "types-python-dateutil==2.9.0.20241206",
+    "typing-extensions==4.12.2",
+    "uri-template==1.3.0",
+    "urllib3==2.3.0",
+    "wcwidth==0.2.13",
+    "webcolors==24.11.1",
+    "webencodings==0.5.1",
+    "websocket-client==1.8.0",
+    "widgetsnbextension==4.0.13",
+    "wrapt==1.17.2",
+]
+
+[tool.pyright]
+venvPath = "."
+venv = ".venv"
