--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ absl-py==2.1.0
 anyio==4.8.0
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
+argparse==1.4.0
 arrow==1.3.0
 asttokens==3.0.0
 async-lru==2.0.4
@@ -70,6 +71,7 @@ nbclient==0.10.2
 nbconvert==7.16.6
 nbformat==5.10.4
 nest-asyncio==1.6.0
+nodeenv==1.9.1
 notebook==7.3.2
 notebook-shim==0.2.4
 numpy==2.2.2
@@ -87,6 +89,7 @@ nvidia-nvjitlink-cu12==12.8.61
 opt-einsum==3.4.0
 overrides==7.7.0
 packaging==24.2
+pandas==2.2.3
 pandocfilters==1.5.1
 parso==0.8.4
 pexpect==4.9.0
@@ -100,8 +103,10 @@ pure-eval==0.2.3
 pycparser==2.22
 pygments==2.19.1
 pyparsing==3.2.1
+pyright==1.1.393
 python-dateutil==2.9.0.post0
 python-json-logger==3.2.1
+pytz==2025.1
 pyyaml==6.0.2
 pyzmq==26.2.1
 referencing==0.36.2
@@ -127,6 +132,7 @@ traitlets==5.14.3
 txt2tags==3.9
 types-python-dateutil==2.9.0.20241206
 typing-extensions==4.12.2
+tzdata==2025.1
 uri-template==1.3.0
 urllib3==2.3.0
 wcwidth==0.2.13
